--- a/src/builder/templates/bootstrap/mw-form-question-builder.html
+++ b/src/builder/templates/bootstrap/mw-form-question-builder.html
@@ -21,6 +21,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-group mw-question-autofill" ng-if="ctrl.showAutofill">
+                    <mw-label label-for="question-autofill-{{ctrl.id}}" label-class="col-sm-2 control-label"  label-key="mwForm.question.autofill"></mw-label>
+                    <div class="col-sm-10 form-inline">
+                        <select ng-attr-id="question-autofill-{{ctrl.id}}" ng-options="'mwForm.question.autofills.'+autofill|translate for autofill in ctrl.autofillList" ng-model="ctrl.question.autofill" class="form-control" ng-disabled="ctrl.readOnly" required></select>
+                    </div>
+                </div>
                 <div class="form-group mw-question-type" ng-repeat="select in ctrl.options.customQuestionSelects">
                     <mw-label label-for="question-{{select.key}}-{{ctrl.id}}" label-class="col-sm-2 control-label"  label-key="{{select.label}}"></mw-label>
                     <div class="col-sm-10 form-inline">
